Prevent editing textarea from overflowing out of bodyContent
Because of the way borders, padding, and other styling is applied to textareas, the editing
textarea winds up slightly wider than the rest of the content when these are used. This
changeset introduces a workaround by instead of applying the styling directly to the textarea,
applying it to a container div as is done in Extension:WikiEditor.

Because WikiEditor also styles a container which winds up inside of this one, it will need
updating as well.

While the container div is added in all skins, the styling itself is changed in only monobook,
vector, and modern (per https://gerrit.wikimedia.org/r/#/c/25170/). Other skins should be
unaffected from a practical standpoint.

Bug: 40610

--- a/skins/common/commonElements.css
+++ b/skins/common/commonElements.css
@@ -225,9 +225,24 @@ form {
 	margin: 0;
 }
 textarea {
+	display: block;
 	width: 100%;
 	padding: .1em;
 }
+#editBox textarea {
+	padding: 0;
+	margin: 0;
+	border: none;
+	resize: vertical;
+}
+#editBox {
+	border: 1px solid #aaaaaa;
+	padding: .2em;
+}
+#editBox textarea:focus {
+	outline: none;
+}
+
 select {
 	vertical-align: top;
 }
